[gd_scene load_steps=6 format=3 uid="uid://bh4vmu4uysfo3"]

[ext_resource type="Texture2D" uid="uid://bw1fffdv106ke" path="res://player/player.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://c43qhlhpt8m35" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="Shader" uid="uid://boq05batcycsk" path="res://player/player.gdshader" id="2_g1dw6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yw30f"]
shader = ExtResource("2_g1dw6")
shader_parameter/new_color = Color(0, 0, 0, 1)
shader_parameter/tolerance = 0.05

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oul6g"]
size = Vector2(8, 8)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_rkbax")

[node name="PlayerSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yw30f")
texture = ExtResource("1_oul6g")

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oul6g")

[node name="PlayerRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 10)
collide_with_areas = true

[node name="Timers" type="Node" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]

[node name="TileCheckTimer" type="Timer" parent="Timers"]
wait_time = 0.3
